<resources>
    <string name="app_name">Exchange22 </string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="sent">Sent</string>
    <string name="ravi_bhadani">Ravi Bhadani</string>
    <string name="ravibhadani_gmail_com">ravibhadani@gmail.com</string>
    <string name="navigation_drawer_open"> Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about">Exchange22 bring together India’s two favourite passion; sports and trading. The first of its’ kind sports fantasy league; Sports stock exchange.\n\nFounded in 2019, one of its kind sports fantasy concept, which merges sports and trading, along the lines of how a stock exchange operates. Instead of trading of stocks of companies, players’ are traded. \n\nWe believe that this one of a kind concept of sports fantasy league will redefine the fantasy league concept and set new benchmarks for its simple, user friendly interface and gameplay, letting the user enjoy and experience the game in a never before manner and even make money out of it. \n\nExchange22 is owned and operated by Hulm Entertainment Pvt. Ltd.</string>
    <string name="address_title">Noida, India</string>
    <string name="contact">+91 888-274-274-3</string>
    <string name="email_address">contact@exchange22.com</string>
    <string name="feature_1">No Team Creation.</string>
    <string name="featurer_2">Buy/Sell player(s).</string>
    <string name="feature_3">Buy/Sell as low as a single share.</string>
    <string name="feature_4">User Friendly Interface</string>
    <string name="feature__4">Create and Manage a Portfolio of player(s).</string>
    <string name="feature_6">Prices will fluctuate according to the performance in the live match.</string>
    <string name="feature_7">Instant results after every match.</string>
    <string name="feature_8">Simplified Points System.</string>
    <string name="feature_9">Attractive bonus offers for users.</string>
    <string name="play_description">Exchange22 is an unique gaming fantasy platform which provides the user with an unique concept of trading which allows the user to trade players.</string>
    <string name="step_one_title">Select a Match</string>
    <string name="step_one_Description">Select a match from the list of upcoming matches.</string>
    <string name="step_two_title">Create and Manage your Portfolio</string>
    <string name="step_two_Description">Create your own portfolio of players by selecting the player(s) based on your knowledge.</string>
    <string name="step_three">Monitor your Players</string>
    <string name="step_three_description">Once the game begins, check the players’ performance in the live match section.</string>
    <string name="step_four">Calculate your Points</string>
    <string name="step_four_Description">Scoring points depends on the Players’ performance. Calculate your points by referring to the Points Table.</string>
    <string name="step_five">Win Cash Prizes</string>
    <string name="step_five_description">Win real cash using your knowledge in sports</string>
    <string name="legality_one_title">Is it legal to play Exchange22?</string>
    <string name="ligality_two_title">So what exactly is a ‘game of skill’?</string>
    <string name="ligality_three_title">Which is the principal legislation governing gambling in India?</string>
    <string name="ligality_four_title">Is playing Fantasy Sports Legal in India?</string>
    <string name="ligality_five_title">Who are eligible to play Exchange22?</string>
    <string name="ligality_one_Description">Yes, Exchange22 is India’s first fantasy sport portal based on the model of a stock exchange and is a ‘game of skill’. The relevant law in India is absolutely clear that, unlike ‘games of chance’, games which substantially require a player to apply his skill are absolutely legal.</string>
    <string name="ligality_two_descripton">The principal legislation governing gambling in India is the Public Gambling Act, 1867 hereinafter referred to as “the Act”. The Act criminalises ‘gambling’ in a public forum and the keeping of a ‘common gaming house’. The Act, however, creates an important exception in favour of games of skill, by stating that the provisions of the Act shall not be held to apply to any ‘game of mere skill’ wherever played.</string>
    <string name="ligality_three_description">Fantasy Sports are not dependent on any outcome related to any real-life event and it is entirely based on the skillset of the participant(s) who uses their knowledge of the sport to determine the probable players likely to play in a certain match, a players’ forms, weather conditions and such other related factors. The result so achieved by a participant of a Fantasy Sports Game is entirely based on his/her skillset.\n\nThe Bombay High Court in the case of Gurdeep Singh Sachar v. Union of India relating to the legality of ‘Online Fantasy Sports Gaming’ offered by a certain fantasy sports platform has held that the games played on the fantasy platform were ‘games of skill’ and not ‘games of chance’. The court ruled that if the result of the game/contest is determined merely by chance or accident, any money put on stake with consciousness of risk and hope to gain, would be \'gambling\' or \'betting\'. Since that is not the case in fantasy games played on such platform, the same does not amount to gambling or betting.</string>
    <string name="ligality_five_Description">Exchange22 is strictly for users who are at least 18 years of age.\n\nCurrently, the residents of Assam, Odisha, Andhra Pradesh , Telangana, Nagaland, Sikkim and Tamil Nadu are not permitted to play pay-to-play formats of any online games. The laws in these states are unclear as to whether games of skill may be played for a cash prize.</string>
    <string name="ligality_four_description">Fantasy Sports are not dependent on any outcome related to any real-life event and it is entirely based on the skillset of the participant(s) who uses their knowledge of the sport to determine the probable players likely to play in a certain match, a players’ forms, weather conditions and such other related factors. The result so achieved by a participant of a Fantasy Sports Game is entirely based on his/her skillset.\n\nThe Bombay High Court in the case of Gurdeep Singh Sachar v. Union of India relating to the legality of ‘Online Fantasy Sports Gaming’ offered by a certain fantasy sports platform has held that the games played on the fantasy platform were ‘games of skill’ and not ‘games of chance’. The court ruled that if the result of the game/contest is determined merely by chance or accident, any money put on stake with consciousness of risk and hope to gain, would be \'gambling\' or \'betting\'. Since that is not the case in fantasy games played on such platform, the same does not amount to gambling or betting.</string>
    <string name="slogn">India’s First Sports \nStock Exchange</string>
    <string name="heading_line">Join Exchange22 and Experience the Thrill</string>
    <string name="privacy_heading">This privacy policy forms part of our “Portal’s” (hereinafter collectively refers to partner website(s) and mobile application(s))Terms and Conditions, by accepting the Terms and Conditions and the Privacy Policy on the registration page, any person utilizing the Portal, hereinafter referred to as the User or “you” or “your” or any of its features including participation in the various contests, games (including fantasy games, hereinafter referred to as Contest(s)Services being conducted on the Portal shall be bound by this Privacy Policy. You consent to provide Personal Information and are aware of the purpose of sharing such information. If you do not wish to consent to sharing of the mandatory personal information with Hulm Entertainment Private Limited hereinafter referred to as “Exchange22” or “we” or “us” or “our”, requested at the time of registration, request you to not to proceed with the registration. Registration procedure cannot be completed until information in the non-optional fields is provided\n        \n\nAt Exchange22, we aim to provide you with a safe, protected and reliable environment to play.We understand and respect your privacy and thus assure you that any Personal Information provided by you toExchange22 is protected and will be dealt with in accordance to this Policy. Exchange22 shall not provide, distribute, trade, sell or rent your name, e-mail address or other personal information provided on this site to any third party or information related to your usage of the Portal, except as provided in this Privacy Policy.</string>
    <string name="privacy_one_title">1. Information Gathered</string>
</resources>