<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<group android:checkableBehavior="single">

<item
    android:icon="@drawable/ic_message"
    android:id="@+id/nav_home"
    android:title="@string/home" />
<item
    android:icon="@drawable/ic_chat"
    android:id="@+id/nav_chat"
    android:title="@string/chat" />
<item
    android:icon="@drawable/ic_profile"
    android:id="@+id/nav_profile"
    android:title="@string/profile" />

</group>

<item android:title="@string/communicate">
<menu>
    <item
        android:icon="@drawable/ic_share"
        android:id="@+id/nav_share"
        android:title="@string/share" />
    <item
        android:icon="@drawable/ic_send"
        android:id="@+id/nav_sent"
        android:title="@string/sent" />
</menu>
</item></menu>